--- a/IISAppManagement/Properties/Resources.resx
+++ b/IISAppManagement/Properties/Resources.resx
@@ -121,4 +121,16 @@
   <data name="main" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\main.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="started" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\started.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="starting" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\starting.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="stopped" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\stopped.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="stopping" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\stopping.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
